name:           ibex
version:        0.1.0.0
build-type:     Simple
cabal-version:  >=1.10

executable ibex
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:    Parse, Ast, Sema, Ir, Codegen
  default-language: Haskell2010
  build-depends:    base == 4.*
                  , containers == 0.6.2.1
                  , mtl == 2.2.2
                  , parsec == 3.1.14.0
                  , text == 1.2.4.1
                  , vector == 0.12.3.0
  ghc-options:      -Wall -XOverloadedStrings -XLambdaCase
